// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Postgres > Props > All the props 1`] = `
[
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "labels": {
        "app": "my-app",
        "environment": "test",
        "instance": "test",
        "region": "local",
        "release": "v1",
        "role": "postgres",
      },
      "name": "test-postgres-test-c8f77601",
      "namespace": "test",
    },
    "spec": {
      "clusterIP": "None",
      "ports": [
        {
          "port": 5432,
          "protocol": "TCP",
        },
      ],
      "selector": {
        "app": "my-app",
        "instance": "test",
        "role": "postgres",
      },
    },
  },
  {
    "apiVersion": "apps/v1",
    "kind": "StatefulSet",
    "metadata": {
      "labels": {
        "app": "my-app",
        "environment": "test",
        "instance": "test",
        "region": "local",
        "release": "v1",
        "role": "postgres",
      },
      "name": "test-postgres-test-postgres-test-sts-c8803176",
      "namespace": "test",
    },
    "spec": {
      "replicas": 1,
      "selector": {
        "matchLabels": {
          "app": "my-app",
          "instance": "test",
          "role": "postgres",
        },
      },
      "serviceName": "test-postgres-test-c8f77601",
      "template": {
        "metadata": {
          "labels": {
            "app": "my-app",
            "environment": "test",
            "instance": "test",
            "region": "local",
            "release": "v1",
            "role": "postgres",
          },
        },
        "spec": {
          "containers": [
            {
              "env": [
                {
                  "name": "POSTGRES_PASSWORD",
                  "value": "secret123",
                },
              ],
              "envFrom": [
                {
                  "configMapRef": {
                    "name": "test",
                  },
                },
              ],
              "image": "postgres:v1",
              "livenessProbe": {
                "exec": {
                  "command": [
                    "pg_isready",
                  ],
                },
                "failureThreshold": 3,
                "initialDelaySeconds": 30,
                "periodSeconds": 10,
                "successThreshold": 1,
                "timeoutSeconds": 5,
              },
              "name": "postgres",
              "ports": [
                {
                  "containerPort": 5432,
                },
              ],
              "readinessProbe": {
                "exec": {
                  "command": [
                    "pg_isready",
                  ],
                },
                "failureThreshold": 3,
                "initialDelaySeconds": 30,
                "periodSeconds": 10,
                "successThreshold": 1,
                "timeoutSeconds": 5,
              },
              "resources": {
                "limits": {
                  "cpu": "100m",
                  "memory": "500Mi",
                },
              },
              "volumeMounts": [
                {
                  "mountPath": "/var/lib/postgresql/data",
                  "name": "postgres-data",
                  "subPath": "postgres",
                },
                {
                  "mountPath": "/tmp",
                  "name": "tmp-dir",
                },
              ],
            },
          ],
          "initContainers": [
            {
              "command": [
                "/bin/sh",
                "-c",
                "echo hello",
              ],
              "image": "busybox:1.35.0",
              "name": "init-container",
            },
          ],
          "priorityClassName": "test",
          "volumes": [
            {
              "emptyDir": {},
              "name": "tmp-dir",
            },
          ],
        },
      },
      "volumeClaimTemplates": [
        {
          "metadata": {
            "name": "postgres-data",
          },
          "spec": {
            "accessModes": [
              "ReadWriteOnce",
            ],
            "resources": {
              "requests": {
                "storage": "20Gi",
              },
            },
            "storageClassName": "general-purpose-delete",
          },
        },
      ],
    },
  },
]
`;

exports[`Postgres > Props > Minimal required props 1`] = `
[
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "labels": {
        "instance": "postgres-test",
        "release": "v1",
        "role": "postgres",
      },
      "name": "test-postgres-test-c8f77601",
    },
    "spec": {
      "clusterIP": "None",
      "ports": [
        {
          "port": 5432,
          "protocol": "TCP",
        },
      ],
      "selector": {
        "instance": "postgres-test",
        "role": "postgres",
      },
    },
  },
  {
    "apiVersion": "apps/v1",
    "kind": "StatefulSet",
    "metadata": {
      "labels": {
        "instance": "postgres-test",
        "release": "v1",
        "role": "postgres",
      },
      "name": "test-postgres-test-postgres-test-sts-c8803176",
    },
    "spec": {
      "replicas": 1,
      "selector": {
        "matchLabels": {
          "instance": "postgres-test",
          "role": "postgres",
        },
      },
      "serviceName": "test-postgres-test-c8f77601",
      "template": {
        "metadata": {
          "labels": {
            "instance": "postgres-test",
            "release": "v1",
            "role": "postgres",
          },
        },
        "spec": {
          "containers": [
            {
              "image": "postgres:v1",
              "livenessProbe": {
                "exec": {
                  "command": [
                    "pg_isready",
                  ],
                },
                "failureThreshold": 3,
                "initialDelaySeconds": 30,
                "periodSeconds": 10,
                "successThreshold": 1,
                "timeoutSeconds": 5,
              },
              "name": "postgres",
              "ports": [
                {
                  "containerPort": 5432,
                },
              ],
              "readinessProbe": {
                "exec": {
                  "command": [
                    "pg_isready",
                  ],
                },
                "failureThreshold": 3,
                "initialDelaySeconds": 30,
                "periodSeconds": 10,
                "successThreshold": 1,
                "timeoutSeconds": 5,
              },
              "resources": {
                "limits": {
                  "cpu": "100m",
                  "memory": "500Mi",
                },
              },
              "volumeMounts": [
                {
                  "mountPath": "/var/lib/postgresql/data",
                  "name": "postgres-data",
                  "subPath": "postgres",
                },
              ],
            },
          ],
          "priorityClassName": "database",
        },
      },
      "volumeClaimTemplates": [
        {
          "metadata": {
            "name": "postgres-data",
          },
          "spec": {
            "accessModes": [
              "ReadWriteOnce",
            ],
            "resources": {
              "requests": {
                "storage": "20Gi",
              },
            },
            "storageClassName": "general-purpose-delete",
          },
        },
      ],
    },
  },
]
`;
